scripts fix